HNG Beauty app landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="navbar-brand-name" href="#home">Beau</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
                 aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fa fa-bars" style="font-size:26px;color: #775531;"></i> <!-- <span class="navbar-toggler-icon"></span> -->
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
                 <ul class="navbar-nav nav-list ml-auto">
